--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body, html {
 }
 
 header, .hero {
-    margin: 0;
     color: #fff;
 }
 
@@ -26,8 +25,19 @@ h1, h2, h3, h6, p, a, pre, code, i {
 }
 
 h1 {
+    font-family: karmina, serif;
     font-weight: 700;
-    font-size: 2em;
+    font-size: 44px;
+    line-height: 1.1;
+    margin-bottom: 15px;
+}
+
+p.intro {
+    font-family: karmina, serif;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 1.25;
+    margin-bottom: 15px;
 }
 
 h2 {
@@ -42,19 +52,23 @@ h2 {
     font-size: 1.4em;
 }
 
+.content p {
+    font-size: 18px;
+}
 
 h3 {
     font-weight: 300;
 }
 
 h6 {
-    font-size: 0.8rem;
+    font-size: 14px;
     font-weight: 200;
 }
 
 p {
-    font-size: 1em;
+    font-size: 1.2em;
     font-weight: 400;
+    line-height: 1.25;
 }
 
 pre {
@@ -68,22 +82,6 @@ li, a, button {
     text-decoration: none;
 }
 
-.logo {
-    font-size: 1.5em;
-    font-weight: 700;
-}
-
-.hero-text p {
-    padding-top: 20px;
-    font-size: 15px;
-    max-width: 380px;
-}
-
-.hero-text h1 {
-    font-size: 36px;
-    line-height: 44px;
-}
-
 i {
     font-size: 24px;
 }
@@ -93,7 +91,7 @@ i {
 .navbar {
     font-size: 16px;
     padding-bottom: 0px;
-    max-width: 1100px;
+    max-width: 1200px;
     margin: auto;
 }
 
@@ -119,9 +117,9 @@ i {
 
 .logo {
     display: inline-block;
-    margin-top: 8px;
-    font-size: 22px;
+    margin-top: 20px;
     margin-left: 25px;
+    width: 300px;
 }
 
 .navbar-toggle {
@@ -153,18 +151,28 @@ i {
     padding: 20px;
 }
 
+.header {
+    border-top: 10px solid #004987;
+}
 
-.hero-background {
-    background: linear-gradient(0deg,#0f5bb2 25%,#177bf2 95%);
+
+.background-img {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.8)), url("assets/ocean.jpg");
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    /* background: linear-gradient(0deg,#0f5bb2 25%,#177bf2 95%); */
 }
 
 .hero {
     display: flex;
     flex-direction: column;
-    /* align-items: center; /* Horizontal align */
+    align-items: center; /* Horizontal align */
     justify-content: center; /* Vertical align */
-    padding-top: 60px;
-    padding-bottom: 40px;
+    text-align: center;
+    padding-top: 75px;
+    padding-bottom: 75px;
 }
 
 .notification {
@@ -196,6 +204,7 @@ i {
 
 .hero-text {
     padding-bottom: 50px;
+    max-width: 800px;
 }
 
 .buttons {
@@ -269,7 +278,7 @@ i {
 
 .wrapper {
     margin: auto;
-    max-width: 1100px;
+    max-width: 900px;
 }
 
 /* Images */
@@ -278,38 +287,19 @@ i {
     width: 300px;
 }
 
-.logo {
-    width: 300px;
-}
-
 
 /* Desktop Styles */
 @media screen and (min-width: 760px) {
 
-    .header {
-        padding-top: 10px;
-    }
-
-    .hero {
+    /* .hero {
         padding-top: 70px;
         padding-bottom: 70px;
-    }
-
-    .hero-text p {
-        font-size: 18px;
-        line-height: 30px;
-        max-width: 500px;
-    }
-    
-    .hero-text h1 {
-        font-size: 60px;
-        line-height: 70px;
-        max-width: 600px;
-    }
+    } */
 
     .flex-container {
         display: flex;
         align-items: center;
+        justify-content: space-between;
     }
 
     .section-two .flex-container {
@@ -317,10 +307,19 @@ i {
     }
 
     .navbar {
+        margin-top: 30px;
         display: flex;
         padding-bottom: 0;
-        height: 70px;
+        height: 50px;
         align-items: center;
+    }
+
+    .section-one .sidebar {
+        justify-content: flex-start;
+    }
+
+    .section-two .sidebar {
+        justify-content: flex-end;
     }
 
     .main-nav {
@@ -345,6 +344,14 @@ i {
     .logo:hover,
     .nav-links:hover {
         color: rgba(255, 255, 255, 1);
+    }
+
+    .sidebar {
+        flex: .5;
+    }
+
+    .content {
+        max-width: 500px;
     }
 
     .section-one, .section-two, .section-three {
